kubernetes/apps/flux-system/weave-gitops/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
  namespace: flux-system
  annotations:
    internal-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames: ["gitops.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: weave-gitops
          port: 9001
